commit desde VS CODE 2

--- a/helloWorld.html
+++ b/helloWorld.html
@@ -6,7 +6,7 @@
     <title>hello Platzi</title>
 </head>
 <body>
-    <h1>Sitio web Cool</h1>
+    <h1>Sitio web Profesional</h1>
     <p>Saludos People</p>
     <p>El curso para recordar cosas básicas esta viniendo muy bien</p>
 </body>
